fix: update z-index

--- a/resources/css/resized-column.css
+++ b/resources/css/resized-column.css
@@ -9,7 +9,7 @@
     user-select: none;
     touch-action: none;
     right: -0.5rem;
-    z-index: 10;
+    z-index: 1;
     display: flex;
     justify-content: center;
 }
